--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -90,6 +90,7 @@ $('#link_address').focusout(function() {
 	
 	$.ajax({
 		url: "/search",
+		dataType: html,
 		type: "GET",
 		data: { link: address },
 
