--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -91,6 +91,7 @@ $('#link_address').focusout(function() {
 	$.ajax({
 		url: "/search",
 		dataType: 'html',
+		cache: 'false',
 		type: "GET",
 		data: { link: address },
 
