--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,8 +40,34 @@
 			</div>
 
 			<!-- comments -->  
+			<% link.comments.each do |comment| %>
+			  <p>
+			    <strong>Commenter:</strong>
+			    <%= comment.commenter %>
+			  </p>
+			 
+			  <p>
+			    <strong>Comment:</strong>
+			    <%= comment.body %>
+			  </p>
+			<% end %>
 
-	
+
+			<h2>Add a comment:</h2>
+			<%= form_for([link, link.comments.build]) do |f| %>
+				<p>
+					<%= f.label :commenter %><br />
+					<%= f.text_field :commenter %>
+				</p>
+				<p>
+					<%= f.label :body %><br />
+					<%= f.text_area :body %>
+				</p>
+				<p>
+					<%= f.submit %>
+				</p>
+			<% end %>
+
 
 
 			<div class="delete">
