--- a/app/assets/stylesheets/home.less
+++ b/app/assets/stylesheets/home.less
@@ -45,17 +45,15 @@ a{
 }
 .link-wrapper{
 	position: relative;
-	width: 100%;
-	height: auto;
-	padding: 10px 0 20px;
+	float: left;
+	width: 85%;
+	height: 110px;
 	margin-top: 10px;
-	margin-right: 4px;
 	background: #ddd;
-	overflow: auto;
 	border-radius: 0px;
 }
 .link-space {
-	margin: 20px;
+	margin: 30px 0 50px 50px;
 	a {
 		font-size: 26px;
 	}
@@ -64,11 +62,12 @@ a{
 	color: #888;
 	font-size: 12px;
 }
+
 .delete a{
 	position: absolute;
-	bottom: 10px;
+	margin-top: 10px;
 	font-size: 10px;
-	color: #999;
+	color: #fff;
 	margin-left: 0;
 }
 .delete a:hover{
@@ -77,4 +76,18 @@ a{
 .delete a:visited{
 
 	color: #999;
+}
+
+.comments {
+	display: table-cell;
+	float: left;
+	width: 15%;
+	height: 110px;
+	margin-top: 10px;
+	background: #a4a6a9;
+	vertical-align: middle;
+	text-align: center;
+}
+.comments-inner{
+	line-height: 110px;
 }
