--- a/app/assets/stylesheets/home.less
+++ b/app/assets/stylesheets/home.less
@@ -52,6 +52,9 @@ a{
 	margin: 30px 0 50px 50px;
 	a {
 		font-size: 22px;
+		&:hover{
+			text-decoration: underline;
+		}
 	}
 }
 .link-attr{
@@ -70,7 +73,6 @@ a{
 	text-decoration: underline;
 }
 .delete a:visited{
-
 	color: #999;
 }
 
@@ -84,6 +86,7 @@ a{
 	text-align: center;
 	&:hover {
 		background: #909192;
+		cursor: pointer;
 	};
 }
 .comment-amount-inner { 
