--- a/app/assets/stylesheets/home.less
+++ b/app/assets/stylesheets/home.less
@@ -105,13 +105,19 @@ a{
 		h3 {
 			margin: 0;
 			color: #494644;
-			line-height: 1.3;
+			line-height: 1.4;
+			font-weight: normal;
 		}
 		p {
 			margin: 0;
 			color: #555;
 			font-size: 12px;
 			font-weight: bold;
+		}
+		a {
+			color: #333;
+			text-decoration: underline;
+			font-weight: normal;
 		}
 	}
 }
