--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -63,6 +63,9 @@
 				<p>
 					<%= comment.commenter %>
 				</p>
+				<div class="delete">
+					<%= link_to 'Delete', [comment.links, comment], :confirm => 'Are you sure?', :method => :delete %>
+				</div>
 			</div>
 		</div>
 		<% end %>
