--- a/app/assets/stylesheets/home.less
+++ b/app/assets/stylesheets/home.less
@@ -82,10 +82,10 @@ a{
 	width: 15%;
 	height: 110px;
 	margin-top: 10px;
-	background: #a4a6a9;
+	background: #b2b1af;
 	text-align: center;
 	&:hover {
-		background: #909192;
+		background: #a3a2a2;
 		cursor: pointer;
 	};
 }
@@ -97,7 +97,7 @@ a{
 .comment {
 	clear: both;
 	width: 100%;
-	background: #a4a6a9;
+	background: #b2b1af;
 	border-bottom: 1px solid #c8c9cb;
 	padding: 16px 0;
 	.comment-text {
@@ -105,7 +105,7 @@ a{
 		margin-bottom: 30px;
 		h3 {
 			margin: 0;
-			color: #494644;
+			color: #302d2d;
 			line-height: 1.4;
 			font-weight: normal;
 		}
