--- a/app/assets/stylesheets/home.less
+++ b/app/assets/stylesheets/home.less
@@ -62,18 +62,19 @@ a{
 	font-size: 12px;
 }
 
-.delete a{
+.delete {
 	position: absolute;
 	margin-top: 10px;
-	font-size: 10px;
-	color: #fff;
 	margin-left: 0;
+	a {
+		color: #999;
+		font-size: 10px;
+		margin-right: 10px;
+		text-decoration: underline;
+	}
 }
 .delete a:hover{
 	text-decoration: underline;
-}
-.delete a:visited{
-	color: #999;
 }
 
 .comment-amount {
@@ -116,7 +117,7 @@ a{
 			font-weight: bold;
 		}
 		a {
-			color: #333;
+			color: #777;
 			text-decoration: underline;
 			font-weight: normal;
 		}
