--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -41,6 +41,7 @@
 			</div>
 
 			<div class="delete">
+				<%= link_to 'Edit', edit_link_path(link) %>
 				<%= link_to 'Delete', link, :confirm => 'Are you sure?', :method => :delete %>
 			</div>
 
@@ -64,6 +65,10 @@
 					<%= comment.commenter %>
 				</p>
 				<div class="delete">
+					<%= link_to 'Edit', {:controller => 'comments',
+										:action => 'edit',
+										:link_id => link.id,
+										:id => comment.id } %>
 					<%= link_to 'Delete', [comment.links, comment], :confirm => 'Are you sure?', :method => :delete %>
 				</div>
 			</div>
