fix slideDown bug

--- a/app/assets/stylesheets/home.less
+++ b/app/assets/stylesheets/home.less
@@ -94,6 +94,9 @@ a{
 	line-height: 110px;
 }
 
+.comm-hide {
+	width: 100%;
+}
 
 .comment {
 	clear: both;
@@ -125,6 +128,10 @@ a{
 }
 
 .new-comment {
+	display: block;
+	position: relative;
+	float: left;
+	width: 100%;
 	input[type=text] {
 		width: 100%;
 		background: transparent;
