--- a/app/assets/stylesheets/main/home.scss
+++ b/app/assets/stylesheets/main/home.scss
@@ -115,15 +115,15 @@ a{
 		h3 {
 			font-size: 18px;
 			margin: 0;
-			color: #302d2d;
-			line-height: 1.4;
+			color: #3d3939;
+			line-height: 1.5;
 			font-weight: normal;
 		}
 		p {
 			margin: 0;
 			color: #555;
 			font-size: 12px;
-			font-weight: bold;
+			font-weight: normal;
 		}
 		a {
 			color: #777;
