--- a/app/assets/stylesheets/main/home.scss
+++ b/app/assets/stylesheets/main/home.scss
@@ -117,7 +117,7 @@ a{
 			margin: 0;
 			color: #3d3939;
 			line-height: 1.5;
-			font-weight: normal;
+			font-weight: 100;
 		}
 		p {
 			margin: 0;
