added working twitter trends

--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
   <div class="section">
     <div class="col twelve">
-      Yo
+        <% @trends.each do |trend| %>
+          <%= trend.name %><br>
+        <% end %>
     </div>
   </div>
 </div>
