--- a/app/assets/stylesheets/main/home.scss
+++ b/app/assets/stylesheets/main/home.scss
@@ -65,21 +65,25 @@ a{
 	padding-bottom: 40px;
 }
 
-.link-wrapper{
+
+.link {
 	position: relative;
 	background: #fff;
 	box-sizing: border-box;
 	padding: 24px 30px;
-}
-.link {
-	a {
+	&:hover {
+		background: #eee;
+		cursor: pointer;
+	}
+	h3 {
+		margin: 0;
+		padding: 0;
+		font-weight: 400;
 		font-size: 17px;
 		line-height: 1.45;
-		&:hover{
-			text-decoration: underline;
-		}
 	}
 }
+
 .link-attr{
 	color: #888;
 	font-size: 12px;
@@ -114,23 +118,6 @@ a{
 	background: #e6e6e6;
 }
 
-.comment-amount {
-	position: relative;
-	float: left;
-	width: 15%;
-	height: auto;
-	margin-top: 10px;
-	background: #b2b1af;
-	text-align: center;
-	&:hover {
-		background: #a3a2a2;
-		cursor: pointer;
-	};
-}
-
-.comm-hide {
-	width: 100%;
-}
 
 .comment {
 	clear: both;
@@ -168,11 +155,10 @@ a{
 	float: left;
 	width: 100%;
 	input[type=text] {
-		width: 100%;
-		background: transparent;
+		width: 90%;
 	}
 	textarea {
-		width: 100%;
+		width: 90%;
 		height: 80px;
 	}
 }
