--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,7 +29,7 @@
 			<h3><%= truncate(link.title, :length => 120) %></h3>
 			<!-- link attributes -->
 			<div class="link-attr">
-				<b><%= link.name %></b>&nbsp;
+				<h4><%= link.name %></h4>
 				<i><%= time_ago_in_words(link.created_at) %> ago</i>&nbsp;
 				| <%= link.comments.count %> comments
 			</div>
@@ -49,16 +49,19 @@
 	<div class="comm-hide" id="cc_<%= link.id %>" style="display:none">
 
 		<div class="link-card">
-			<h2><%= link.title %></h2>
+			<div class="left">
+				<div class="thumb"></div>
+			</div>
+			<div class="right">
+				<a href="<%= link.address %>" target="_blank"><h2><%= link.title %></h2></a>
+			</div>
 		</div>
+
 
 		<% link.comments.each do |comment| %>
 		<div class="comment">
-			<div class="comment-text">
-				<h3><%= comment.body.html_safe %></h3>
-				<p>
-					<%= comment.commenter %>
-				</p>
+			<div class="left">
+				<h4><%= comment.commenter %></h4>
 				<div class="delete">
 					<%= link_to 'Edit', {:controller => 'comments',
 										:action => 'edit',
@@ -66,6 +69,9 @@
 										:id => comment.id } %>
 					<%= link_to 'Delete', [comment.links, comment], :confirm => 'Are you sure?', :method => :delete %>
 				</div>
+			</div>
+			<div class="right">
+				<p><%= comment.body.html_safe %></p>
 			</div>
 		</div>
 		<% end %>
