migrate db added description and thumbnail link

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,6 +16,9 @@
 	<%= f.label :title %>
 	<%= f.text_field :title %><br />
 
+	<div id="description"></div>
+	<img id="thumbnail" src="">
+
 	<%= f.submit %>
 	<% end %>
 </div>
