--- a/app/assets/stylesheets/main/home.scss
+++ b/app/assets/stylesheets/main/home.scss
@@ -61,6 +61,14 @@ html, body{
 	background: #fff;
 	box-shadow: 1px 1px 3px #ccc;
 	z-index: 10;
+	input {
+		width: 40%;
+		height: 20px;
+		margin: 4px;
+	}
+	input[type="submit"]{
+		width: auto;
+	}
 }
 
 
