--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,12 +40,6 @@
 				<i><%= time_ago_in_words(link.created_at) %> ago</i>&nbsp;
 				| <%= link.comments.count %> comments
 			</div>
-			<!--
-			<div class="delete">
-				<%= link_to 'Edit', edit_link_path(link) %>
-				<%= link_to 'Delete', link, :confirm => 'Are you sure?', :method => :delete %>
-			</div>
-			-->
 	</div>
 	<% end %>
 </div><!-- CLOSE links -->
@@ -57,10 +51,21 @@
 
 		<div class="link-card">
 			<div class="left">
-				<div class="thumb"></div>
+				<div class="thumb">
+					<% if link.thumbnail.present? %>
+						<img src="<%= link.thumbnail %>">
+					<% else %>
+						<div style="width: 100%; height: 100%; background: #ccc; display: block"></div>
+					<% end %>
+				</div>
+				<div class="delete">
+					<%= link_to 'Edit', edit_link_path(link) %>
+					<%= link_to 'Delete', link, :confirm => 'Are you sure?', :method => :delete %>
+				</div>
 			</div>
 			<div class="right">
 				<a href="<%= link.address %>" target="_blank"><h2><%= link.title %></h2></a>
+				<p><%= link.description %></p>
 			</div>
 		</div>
 
