--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -46,8 +46,8 @@
 
 
 <div class="comments">
-<% @links_show.each do |link| %>
-	<div class="comm-hide" id="cc_<%= link.id %>" style="display:none">
+<% @links_show.each_with_index do |link, index| %>
+	<div class="comm-hide" id="cc_<%= link.id %>" style="<%= "display: none" unless index == 0 %>">
 
 		<div class="link-card">
 			<div class="left">
