--- a/app/assets/stylesheets/main/home.scss
+++ b/app/assets/stylesheets/main/home.scss
@@ -11,8 +11,14 @@ html, body{
 	font-size: 14px;
 	margin: 0;
 	padding: 0;
+	color: $darkBrown;
 }
 
+p {
+	font-size: 17px;
+	letter-spacing: .01rem;
+	line-height: 1.5;
+}
 
 .touch {
 	position: absolute;
@@ -183,7 +189,7 @@ a{
 	h2 {
 		margin: 0;
 		padding: 0;
-		font-size: 24px;
+		font-size: 28px;
 		font-weight: 400;
 		text-decoration: underline;
 		color: #999;
@@ -203,8 +209,6 @@ a{
 	}
 	p {
 		margin: 0;
-		color: #555;
-		font-size: 17px;
 	}
 	a {
 		color: #777;
