added name back to pastee

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,6 +10,9 @@
 </div>
 
 <div id="title_hide" style="display:none">
+	<%= f.label :name, "User" %>
+	<%= f.text_field :name %><br />
+
 	<%= f.label :title %>
 	<%= f.text_field :title %><br />
 
