fixed editing and css

--- a/app/assets/stylesheets/load-first/_index.scss
+++ b/app/assets/stylesheets/load-first/_index.scss
@@ -2,4 +2,6 @@
 // Loads the .SCSS files from the subfolders
 // --------------------------------------------------
 
+@import "mixins";
+@import "base";
 
