--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -91,11 +91,11 @@
 		<div class="new-comment">
 			<%= form_for([link, link.comments.build]) do |f| %>
 			<p>
-				<%= f.label :commenter %><br />
+				<%= f.label :commenter, "Name" %><br />
 				<%= f.text_field :commenter %>
 			</p>
 			<p>
-				<%= f.label :body %><br />
+				<%= f.label :body, "Comment" %><br />
 				<%= f.text_area :body %>
 			</p>
 			<p>
