--- a/app/views/links/edit.html.erb
+++ b/app/views/links/edit.html.erb
@@ -1,23 +1,29 @@
-<h1>Editing link</h1>
+<div class="container">
+  <div class="section row row-one">
+    <div class="col twelve edit">
+      <h1>Editing link</h1>
 
-<%= form_for @links do |f| %>
-<p>
-	<%= f.label :name %><br />
-	<%= f.text_field :name %>
-</p>
-<p>
-	<%= f.label :title %><br />
-	<%= f.text_area :title %>
-</p>
-<p>
-  <%= f.label :address %><br />
-  <%= f.text_area :address %>
-</p>
-<p>
-  <%= f.label :description %><br />
-  <%= f.text_area :description %>
-</p>
-<p>
-	<%= f.submit %>
-</p>
-<% end %>
+      <%= form_for @links do |f| %>
+        <p>
+         <%= f.label :name %><br />
+         <%= f.text_field :name %>
+         </p>
+         <p>
+           <%= f.label :title %><br />
+           <%= f.text_area :title %>
+         </p>
+         <p>
+          <%= f.label :address %><br />
+          <%= f.text_area :address %>
+        </p>
+        <p>
+          <%= f.label :description %><br />
+          <%= f.text_area :description, :rows => '4' %>
+        </p>
+        <p>
+        	<%= f.submit "Update link", :class => "button" %>
+        </p>
+      <% end %>
+    </div>
+  </div>
+</div>
