--- a/app/assets/stylesheets/main/home.scss
+++ b/app/assets/stylesheets/main/home.scss
@@ -127,6 +127,7 @@ a{
 		display: inline-block;
 		padding-right: 4px;
 		font-weight: 700;
+		font-size: 12px;
 		text-transform: uppercase;
 		margin: 0;
 		line-height: 1.5;
@@ -245,7 +246,13 @@ a{
 	}
 }
 
-
-
+.edit {
+	input[type="text"] {
+		width: 100%;
+	}
+	textarea {
+		width: 100%;
+	}
+}
 
 
