--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,15 +1,21 @@
-<h1>Editing comment</h1>
+<div class="container">
+  <div class="section row row-one">
+    <div class="col twelve edit">
+        <h1>Editing comment</h1>
 
-<%= form_for([@links, @comment]) do |f| %>
-<p>
-	<%= f.label :commenter %><br />
-	<%= f.text_field :commenter %>
-</p>
-<p>
-	<%= f.label :body %><br />
-	<%= f.text_area :body %>
-</p>
-<p>
-	<%= f.submit %>
-</p>
-<% end %>
+        <%= form_for([@links, @comment]) do |f| %>
+        <p>
+        	<%= f.label :commenter, "Name" %><br />
+        	<%= f.text_field :commenter %>
+        </p>
+        <p>
+        	<%= f.label :body, "Comment" %><br />
+        	<%= f.text_area :body, :rows => '6' %>
+        </p>
+        <p>
+        	<%= f.submit "Update comment", :class => "button" %>
+        </p>
+        <% end %>
+    </div>
+  </div>
+</div>
