--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -46,6 +46,9 @@
 
 
 <div class="comments close">
+	<div class="mobile-back">
+		←BACK
+	</div>
 <% @links_show.each_with_index do |link, index| %>
 	<div class="comm-hide" id="cc_<%= link.id %>" style="<%= "display: none" unless index == 0 %>">
 
