--- a/app/assets/stylesheets/main/home.scss
+++ b/app/assets/stylesheets/main/home.scss
@@ -259,8 +259,13 @@ a{
 }
 
 @media only screen and (max-width: $mobile-breakpoint) {
+	.pasteee {
+		height: 40px;
+		line-height: 40px;
+	}
 	.links {
 		width: 100%;
+		top: 40px;
 	}
 	.link-card {
 		.thumb {
@@ -274,6 +279,7 @@ a{
 		visibility: hidden;
 		width: 100%;
 		left: 100%;
+		top: 40px;
 		padding: 20px 20px 30px;
 		-webkit-transition: all .6s ease;
 	}
